force-app/main/default/objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <description>Fifty Annual budget details</description>
    <label>Budget</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>