force-app/main/default/objects/Budget__c/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <description>Changes Colour letter into the name</description>
    <formula>Case( Colour_Code__c, &quot;A&quot;, &quot;Amber&quot;, &quot;B&quot;, &quot;Flint&quot; , &quot;C&quot; , &quot;Artic Blue&quot;, &quot;D&quot;, &quot;Colbalt Blue&quot;, &quot;E&quot; , &quot;Half Flint&quot;, &quot;F&quot;, &quot;Autumn Leaf&quot;, &quot;K&quot;, &quot;Mallaca&quot;, &quot;L&quot;, &quot;Sea Green&quot;, &quot;M&quot;, &quot;Eurogreen/Moss&quot;, &quot;N&quot;, &quot;Black&quot;, &quot;O&quot;, &quot;Dark Green&quot;, &quot;T&quot;, &quot;Brown&quot;, &quot;V&quot;, &quot;Green&quot;, &quot; &quot;)</formula>
    <label>Colour</label>
    <type>Text</type>
</CustomField>