force-app/main/default/objects/Budget__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Changes SAP code into a name</description>
    <formula>Case( Market_Code__c, &quot;ES&quot;, &quot;Spain&quot;, &quot;FR&quot;, &quot;France&quot; , &quot;PT&quot; , &quot;Portugal&quot;, &quot;NM&quot;, &quot;New Market/Export&quot;, &quot;RM&quot;, &quot;Other&quot;, &quot; &quot;)</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>