force-app/main/default/objects/Budget__c/fields/Market_Code__c.field-meta.xml
<CustomField>
    <fullName>Market_Code__c</fullName>
    <label>Market Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market</valueSetName>
    </valueSet>
</CustomField>