force-app/main/default/objects/Budget__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>This is the month in figures</description>
    <label>Month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>