force-app/main/default/objects/Budget__c/fields/Month_Name__c.field-meta.xml
<CustomField>
    <fullName>Month_Name__c</fullName>
    <description>Changes month number into name</description>
    <formula>Case( Month__c , &quot;1&quot;, &quot;Jan&quot;, &quot;2&quot;, &quot;Feb&quot; , &quot;3&quot; , &quot;Mar&quot;, &quot;4&quot;, &quot;Apr&quot;, &quot;5&quot; , &quot;May&quot;, &quot;6&quot;, &quot;Jun&quot;, &quot;7&quot;, &quot;Jul&quot;, &quot;8&quot;, &quot;Aug&quot;, &quot;9&quot;, &quot;Sep&quot;,&quot;10&quot;, &quot;Oct&quot;, &quot;11&quot;, &quot;Nov&quot;, &quot;12&quot;, &quot;Dec&quot;, &quot;Else_none&quot;)</formula>
    <label>Month Name</label>
    <type>Text</type>
</CustomField>