force-app/main/default/objects/Budget__c/fields/Sales_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organisation__c</fullName>
    <inlineHelpText>SAP Sales Org</inlineHelpText>
    <label>Sales Organisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Organization</valueSetName>
    </valueSet>
</CustomField>