force-app/main/default/objects/Budget__c/fields/SAP_Society__c.field-meta.xml
<CustomField>
    <fullName>SAP_Society__c</fullName>
    <label>SAP Society</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>