force-app/main/default/objects/Budget__c/fields/Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Tonnage__c</fullName>
    <label>Tonnage</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>