force-app/main/default/objects/Budget__c/fields/Turnover_000__c.field-meta.xml
<CustomField>
    <fullName>Turnover_000__c</fullName>
    <label>Turnover (000)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>