force-app/main/default/objects/Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SAP_Society__c</columns>
    <columns>Market__c</columns>
    <columns>Year__c</columns>
    <columns>Month_Name__c</columns>
    <columns>Colour__c</columns>
    <columns>Sales_Organisation__c</columns>
    <columns>Tonnage__c</columns>
    <columns>Turnover_000__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>